<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.SistemaSilvoActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/ImgColgada"
        android:layout_width="104dp"
        android:layout_height="201dp"
        android:src="@drawable/colgandodisable"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/SistemaSilvopastoril"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="50dp"
        android:text="Sistema silvopastoril"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <ImageView
        android:id="@+id/ImgSilvo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/hojas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ImgColgada"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/tipos"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintHijo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="¿Qué es?"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtDesc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/descripcionSS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

            <ImageView
                android:id="@+id/sistemaSilvo"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDesc"
                app:srcCompat="@drawable/silvopastoril" />

            <TextView
                android:id="@+id/txtBeneficios"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Beneficios"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sistemaSilvo" />

            <ImageView
                android:id="@+id/ivPunto1"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtBeneficios"
                app:srcCompat="@drawable/punto" />

            <ImageView
                android:id="@+id/imPunto2"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPunto1"
                app:srcCompat="@drawable/punto" />

            <ImageView
                android:id="@+id/ivPunto3"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imPunto2"
                app:srcCompat="@drawable/punto" />

            <ImageView
                android:id="@+id/ivPunto4"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPunto3"
                app:srcCompat="@drawable/punto" />

            <ImageView
                android:id="@+id/ivPunto5"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivPunto4"
                app:srcCompat="@drawable/punto" />

            <TextView
                android:id="@+id/benef1"
                android:layout_width="271dp"
                android:layout_height="35dp"
                android:layout_marginTop="24dp"
                android:text="@string/benf1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPunto1"
                app:layout_constraintTop_toBottomOf="@+id/txtBeneficios" />

            <TextView
                android:id="@+id/benef2"
                android:layout_width="271dp"
                android:layout_height="35dp"
                android:layout_marginTop="24dp"
                android:text="@string/benf2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imPunto2"
                app:layout_constraintTop_toBottomOf="@+id/benef1" />

            <TextView
                android:id="@+id/benef3"
                android:layout_width="271dp"
                android:layout_height="35dp"
                android:layout_marginTop="24dp"
                android:text="@string/benf3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPunto3"
                app:layout_constraintTop_toBottomOf="@+id/benef2" />

            <TextView
                android:id="@+id/benef4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/benf4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPunto4"
                app:layout_constraintTop_toBottomOf="@+id/benef3" />

            <TextView
                android:id="@+id/benef5"
                android:layout_width="271dp"
                android:layout_height="35dp"
                android:layout_marginTop="24dp"
                android:text="@string/benf5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivPunto5"
                app:layout_constraintTop_toBottomOf="@+id/benef4" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/tipos"
        android:layout_width="140dp"
        android:layout_height="62dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:srcCompat="@drawable/tipos" />

</androidx.constraintlayout.widget.ConstraintLayout>